@startuml

skinparam classAttributeIconSize 0

class CentralPortsController {
    +getMostCentralPorts()
}

class Company {
    -designation
    +getFreightNetwork()
}

class FreightNetwork {
    +getMostCentralPorts()
}

abstract class Location{
    -latitude
    -longitude
    -countryName
}

class Port {
    -identification
    -name
    -continent
    -toPortsDistance
}


class MatrixGraph {}

abstract class CommonGraph {}

interface Graph <<interface>> {}

CentralPortsController ..> Company
Company "1" -- "1" FreightNetwork : knows >
Location <|-- Port
FreightNetwork "*" -- "1..*" Location : of >
FreightNetwork ..> MatrixGraph
CommonGraph <|- MatrixGraph
CommonGraph --> Graph

@enduml